<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:text="TẠO VOUCHER"
        android:textAlignment="viewStart"
        android:textColor="#3949AB"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editVoucherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/khung"
        android:hint="@string/hint_voucher_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editVoucherDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/khung"
        android:hint="@string/hint_voucher_discount"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editVoucherQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/khung"
        android:hint="@string/hint_voucher_quantity"
        android:inputType="number"
        android:padding="10dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="196dp" />

    <Button
        android:id="@+id/buttonSaveVoucher"
        android:layout_width="126dp"
        android:layout_height="63dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1E88E5"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>